ci/kustomize/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: demo-microservice
spec:
  host: demo-microservice.apps.play.gepaplexx.com
  port:
    targetPort: http
  to:
    kind: Service
    name: demo-microservice
    weight: 100
  wildcardPolicy:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
